--- a/MeetingPlanner/MainWindow.xaml
+++ b/MeetingPlanner/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MeetingPlanner.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="700" Width="900">
+        Title="MeetingPlanner" Height="700" Width="900">
     <Grid>
         <ContentControl x:Name="MainContentControl"/>
     </Grid>
