--- a/MeetingPlanner/Views/LoginView.xaml
+++ b/MeetingPlanner/Views/LoginView.xaml
@@ -11,7 +11,7 @@
     <!-- Ресурсы для анимаций кнопок внизу -->
     <UserControl.Resources>
         <Style TargetType="Button" x:Key="AuthButtonStyle">
-            <Setter Property="Background" Value="#6a7eee"/>
+            <Setter Property="Background" Value=" #0E294B"/>
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="FontWeight" Value="Bold"/>
@@ -38,7 +38,7 @@
                                         <Storyboard>
                                             <ColorAnimation Storyboard.TargetName="border" 
                                                            Storyboard.TargetProperty="Background.Color"
-                                                           To="#5a6ede" Duration="0:0:0.2"/>
+                                                           To=" #0E294B" Duration="0:0:0.2"/>
                                             <DoubleAnimation Storyboard.TargetName="border" 
                                                             Storyboard.TargetProperty="RenderTransform.ScaleX"
                                                             To="1.03" Duration="0:0:0.1"/>
@@ -79,7 +79,7 @@
         <Grid.Effect>
             <DropShadowEffect BlurRadius="30" ShadowDepth="1" Opacity="0.4"/>
         </Grid.Effect>
-        <Border Background="#6a7eee" ClipToBounds="True">
+        <Border Background="#0E294B" ClipToBounds="True">
 
             <Grid>
                 <StackPanel Margin="0 120 0 0" VerticalAlignment="Top">
@@ -114,7 +114,7 @@
                     <!-- Логин -->
                     <StackPanel Margin="0,0,0,15">
                         <Label Content="Имя пользователя" 
-                               Foreground="#6a7eee" 
+                               Foreground="#0E294B" 
                                FontWeight="Bold"
                                FontSize="14"
                                Padding="0,0,0,5"/>
@@ -132,7 +132,7 @@
                     <!-- Пароль -->
                     <StackPanel Margin="0,15,0,0">
                         <Label Content="Пароль" 
-                               Foreground="#6a7eee" 
+                               Foreground=" #0E294B" 
                                FontWeight="Bold"
                                FontSize="14"
                                Padding="0,0,0,5"/>
