--- a/MeetingPlanner/Views/ContactsView.xaml
+++ b/MeetingPlanner/Views/ContactsView.xaml
@@ -11,7 +11,10 @@
     <UserControl.Resources>
         <Converters:StringToBrushConverter x:Key="StringToBrushConverter"/>
         <Converters:FriendStatusToVisibilityConverter x:Key="FriendStatusToVisibilityConverter"/>
-        <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <Converters:FriendTagToNameConverter x:Key="FriendTagToNameConverter"/>
+        <Converters:TagVisibilityConverter x:Key="TagVisibilityConverter"/>
+        <Converters:FriendTagConverter x:Key="FriendTagConverter"/>
+        
         <Style TargetType="{x:Type Popup}">
             <Setter Property="AllowsTransparency" Value="True"/>
             <Setter Property="FocusManager.IsFocusScope" Value="True"/>
@@ -182,90 +185,82 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal" Margin="5">
                                 <Image Source="{Binding AvatarPath}" 
-                       Width="50" Height="50" 
-                       Margin="0,0,10,0"/>
+                                       Width="50" Height="50" 
+                                       Margin="0,0,10,0"/>
 
                                 <StackPanel VerticalAlignment="Center">
                                     <TextBlock Text="{Binding FirstName}" FontWeight="Bold"/>
                                     <TextBlock Text="{Binding Username}" Foreground="#555"/>
                                 </StackPanel>
 
-                                <!-- Отображение тега -->
-                                <Border Background="{Binding ReceivedFriendRequests[0].TagColor, 
-                                     Converter={StaticResource StringToBrushConverter}}"
-                                    CornerRadius="3"
-                                    Padding="5,2"
-                                    VerticalAlignment="Center"
-                                    Margin="10,0,0,0">
-                                    <TextBlock Text="{Binding ReceivedFriendRequests[0].FriendTag}"
-                               Foreground="White"
-                               FontWeight="Bold"/>
+                                <!-- Исправленный блок тега друга -->
+                                <Border CornerRadius="3" Padding="5,2" VerticalAlignment="Center" Margin="10,0,0,0">
+                                    <Border.DataContext>
+                                        <MultiBinding Converter="{StaticResource FriendTagConverter}">
+                                            <Binding Path="DataContext" RelativeSource="{RelativeSource AncestorType=UserControl}"/>
+                                            <Binding/>
+                                        </MultiBinding>
+                                    </Border.DataContext>
+                                    <Border.Style>
+                                        <Style TargetType="Border">
+                                            <Setter Property="Background" Value="{Binding TagColor, Converter={StaticResource StringToBrushConverter}}"/>
+                                            <Setter Property="Visibility" Value="{Binding TagName, Converter={StaticResource FriendTagToNameConverter}}"/>
+                                        </Style>
+                                    </Border.Style>
+                                    <TextBlock Text="{Binding TagName}"
+                                               Foreground="White"
+                                               FontWeight="Bold"/>
                                 </Border>
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
-
-                <!-- Декоративные элементы -->
-                <Ellipse Width="100" Height="100" 
-                         Fill="#80c0ff" 
-                         HorizontalAlignment="Right" 
-                         VerticalAlignment="Bottom"
-                         Margin="0,10,0,0"
-                         Opacity="0.3"/>
-                <Ellipse Width="50" Height="50" 
-                         Fill="#80c0ff" 
-                         HorizontalAlignment="Right" 
-                         VerticalAlignment="Bottom"
-                         Margin="100,10,20,0"
-                         Opacity="0.3"/>
             </StackPanel>
         </Border>
-        <Popup 
-            x:Name="TagPopup" 
+        <Popup x:Name="TagPopup" 
                Placement="Center" 
                PlacementTarget="{Binding ElementName=MainGrid}"
                IsOpen="{Binding IsTagPopupOpen}"
-               StaysOpen="False"
-               Focusable="True">
+               StaysOpen="False">
             <Border Background="White" 
-            Padding="15" 
-            CornerRadius="5"
-            BorderBrush="#0E294B"
-            BorderThickness="1">
+                    Padding="15" 
+                    CornerRadius="5"
+                    BorderBrush="#0E294B"
+                    BorderThickness="1">
                 <StackPanel>
                     <TextBlock Text="Установите тег для друга" 
-                       FontWeight="Bold"
-                       Margin="0,0,0,10"/>
+                               FontWeight="Bold"
+                               Margin="0,0,0,10"/>
 
                     <TextBox x:Name="TagInputTextBox" 
-                         Text="{Binding CurrentTagText, UpdateSourceTrigger=PropertyChanged}" 
-                         Margin="0,0,0,10"
-                         MinWidth="200">
+                             Text="{Binding CurrentTagText, UpdateSourceTrigger=PropertyChanged}" 
+                             Margin="0,0,0,10"
+                             MinWidth="200">
                         <TextBox.InputBindings>
                             <KeyBinding Key="Enter" Command="{Binding SaveFriendTagCommand}"/>
                         </TextBox.InputBindings>
                     </TextBox>
 
-                    <StackPanel Orientation="Horizontal" 
-                        HorizontalAlignment="Center">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                         <ComboBox ItemsSource="{Binding AvailableTagColors}"
-                          SelectedItem="{Binding SelectedTagColor}"
-                          Width="100"
-                          Margin="0,0,10,0">
+                                  SelectedItem="{Binding SelectedTagColor}"
+                                  Width="100"
+                                  Margin="0,0,10,0">
                             <ComboBox.ItemTemplate>
                                 <DataTemplate>
-                                    <Rectangle Width="20" Height="20" 
-                                       Fill="{Binding Converter={StaticResource StringToBrushConverter}}"/>
+                                    <Rectangle Width="20" Height="20">
+                                        <Rectangle.Fill>
+                                            <Binding Converter="{StaticResource StringToBrushConverter}"/>
+                                        </Rectangle.Fill>
+                                    </Rectangle>
                                 </DataTemplate>
                             </ComboBox.ItemTemplate>
                         </ComboBox>
 
                         <Button Content="Сохранить" 
-                        Command="{Binding SaveFriendTagCommand}"
-                        Style="{StaticResource ContactButtonStyle}"
-                        Width="100"
-                        IsDefault="True"/>
+                                Command="{Binding SaveFriendTagCommand}"
+                                Style="{StaticResource ContactButtonStyle}"
+                                Width="100"/>
                     </StackPanel>
                 </StackPanel>
             </Border>
